change layout and fix desc to look ok
* have main box be all the focus until sidebars come in:
  with inline-block, main box resizes which fixes table
  hanging out of parent div
* shorten desc and not prematurely, guaranteed to one line with ellipsis class
  http://stackoverflow.com/questions/802175/truncating-long-strings-with-css-feasible-yet
  I have not bothered to add firefox support for this

--- a/resources/public/css/application.css
+++ b/resources/public/css/application.css
@@ -1,6 +1,5 @@
 #main {
-  width: 720px;
-  margin: auto;
+  margin-left: 100px;
 }
 
 #main .alert {
@@ -9,6 +8,7 @@
 
 .top_box {
   margin-top: 50px;
+  display: inline-block;
 }
 
 #search_box table {
@@ -17,4 +17,11 @@
 
 #url_search_button {
   margin-left: 14px
+}
+
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
 }
